--- a/Excel2013AppSignalRSampleWeb/Excel2013AppSignalRSampleWeb.csproj
+++ b/Excel2013AppSignalRSampleWeb/Excel2013AppSignalRSampleWeb.csproj
@@ -92,9 +92,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\App.css" />
+    <Content Include="Content\bootstrap-responsive.css" />
+    <Content Include="Content\bootstrap-responsive.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\glyphicons-halflings-white.png" />
+    <Content Include="Content\images\glyphicons-halflings.png" />
     <Content Include="Content\Office.css" />
     <Content Include="packages.config" />
     <Content Include="Pages\ExcelSignalRSample.html" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\ExcelSignalRSample.js" />
     <None Include="Scripts\Office\1.0\outlook-15.debug-vsdoc.js" />
     <None Include="Scripts\Office\1.0\office-vsdoc.js" />
