--- a/Excel2013AppSignalRSampleWeb/packages.config
+++ b/Excel2013AppSignalRSampleWeb/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="Owin" version="1.0" targetFramework="net40" />
+  <package id="Twitter.Bootstrap" version="2.2.2" targetFramework="net40" />
   <package id="WebActivator" version="1.5.3" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
