--- a/Excel2013AppSignalRSampleWeb/packages.config
+++ b/Excel2013AppSignalRSampleWeb/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="jQuery" version="1.8.3" targetFramework="net40" />
   <package id="jQuery.Color" version="2.1.0" targetFramework="net40" />
+  <package id="jQuery.UI.Combined" version="1.10.0" targetFramework="net40" />
+  <package id="jQuery.UI.Themes.lightness" version="1.8.22" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR" version="1.0.0-rc2" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-rc2" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0-rc2" targetFramework="net40" />
